<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_blue_light" />
    <!-- Connect Device information -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:padding="3dip">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dp"
            android:src="@drawable/machine" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/tv_his_name"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/icon_no_device"
                android:textSize="25dip" />
            <TextView
                android:id="@+id/tv_his_status"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:text="@string/icon_no_device_status"
                android:textSize="25dip" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_connect"
            android:visibility="gone"
            android:textSize="25dip" />
        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_disconnect"
            android:visibility="gone"
            android:textSize="25dip" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvWifiInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dip"/>

    <TextView
        android:id="@+id/tvGroupOwner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_message"
        android:textSize="25dip" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_nickname"
            android:textSize="24dp"/>
        <EditText
            android:id="@+id/etNickName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="24"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>