<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/item_margin_left"
    android:paddingLeft="@dimen/item_margin_left">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnScanDevice"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan_bluetooth"
            android:textSize="@dimen/btn_text_size_small"/>
        <Button
            android:id="@+id/btnStartListen"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_listen"
            android:textSize="@dimen/btn_text_size_small"/>
        <Button
            android:id="@+id/btnStopLink"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop_link"
            android:textSize="@dimen/btn_text_size_small"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCurrentState"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"/>
            <TextView
                android:id="@+id/tvDeviceName"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginRight="@dimen/item_margin_left"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_bound_device"/>
    <ListView
        android:id="@+id/lv_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginRight="@dimen/item_margin_left"
        android:background="@android:color/holo_blue_light" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_not_bound_device"/>

    <ListView
        android:id="@+id/lv_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true"
        />




</LinearLayout>